hola-k8s/hola-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hola
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hola
  template:
    metadata:
      labels:
        app: hola
        app.kubernetes.io/name: hola
        app.kubernetes.io/component: service
        app.kubernetes.io/part-of: holaweb
        app.kubernetes.io/version: 0.0.2
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/path: '/metrics'
        prometheus.io/port: '3333'
    spec:
      containers:
        - name: hola
          image: mnroman/hello-world-nodejs:0.0.1
          ports:
            - containerPort: 3333
          imagePullPolicy: Always
      imagePullSecrets:
      - name: regcred
