hola-k8s/hola-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: hola
  labels:
    app: hola
spec:
  selector:
    app: hola
  ports:
    - port: 80
      targetPort: 3333
      name: frontend
  type: ClusterIP
