hola-k8s/hola-ingress-app.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
  name: ingress-kube-system
  namespace: kube-system
spec:
  rules:
  - host: holaapp
    http:
      paths:
      - backend:
          service:
            name: hola
            port:
              number: 3333
        path: /
        pathType: Prefix
status:
  loadBalancer:
    ingress:
    - ip: 10.250.1.90
